# gridpp

./: .arcconfig  .gitattributes  .gitignore  .pbuilderrc  .travis.yml  CMakeLists.txt  COPYING  Calibration.cpp  Calibration.h  Coeffs.cpp  Coeffs.h  CoeffsFile.cpp  CoeffsFile.h  DEVELOPERS.rst  DataFile.cpp  DataFile.h  FSM.txt  FactorsFile.cpp  FactorsFile.h  File.cpp  File.h  Options.cpp  Options.h  ParameterFile.cpp  ParameterFile.h  Parameters.cpp  Parameters.h  PrecipCal.cpp  README  README.md  README.rst  SMHI-gridpp-lib.spec  Site.cpp  Site.h  Test.cpp  Test.h  Util.cpp  Util.h  Variable.cpp  Variable.h  (+5 more)
.vs2/: slnx.sqlite
0.4.2/: Doxyfile  README_8md.html  annotated.html  calc__gradient_8cpp.html  classgridpp_1_1BoxCox-members.html  classgridpp_1_1BoxCox.html  classgridpp_1_1CressmanStructure.html  classgridpp_1_1CrossValidation.html  classgridpp_1_1Grid-members.html  classgridpp_1_1Grid.html  classgridpp_1_1Identity-members.html  classgridpp_1_1KDTree-members.html  classgridpp_1_1Log-members.html  classgridpp_1_1Log.html  classgridpp_1_1Point-members.html  classgridpp_1_1Points-members.html  classgridpp_1_1Points.html  classgridpp_1_1StructureFunction-members.html  classgridpp_1_1StructureFunction.html  classgridpp_1_1Transform-members.html  classgridpp_1_1Transform.html  correction_8cpp.html  count_8cpp.html  curve_8cpp.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  distance_8cpp.html  fill_8cpp.html  functions_vars.html  globals_func.html  grid_8cpp.html  gridpp_8h.html  index.html  metric__optimizer_8cpp.html  namespacegridpp.html  namespacemembers_enum.html  namespacemembers_func.html  namespaces.html  neighbourhood_8cpp.html  pages.html  (+5 more)
0.5.0/: bilinear_8cpp.html  calc__gradient_8cpp.html  classes.html  classgridpp_1_1BarnesStructure-members.html  classgridpp_1_1BarnesStructure.html  classgridpp_1_1BoxCox-members.html  classgridpp_1_1CrossValidation.html  classgridpp_1_1Grid.html  classgridpp_1_1KDTree-members.html  classgridpp_1_1KDTree.html  classgridpp_1_1Log-members.html  classgridpp_1_1Log.html  classgridpp_1_1Point-members.html  classgridpp_1_1Points-members.html  classgridpp_1_1StructureFunction-members.html  classgridpp_1_1StructureFunction.html  classgridpp_1_1Transform-members.html  classgridpp_1_1Transform.html  correction_8cpp.html  deprecated.html  dir_da61e3e9a357748887e3ca8d7c5a0c16.html  fill_8cpp.html  functions.html  gridding_8cpp.html  gridpp_8h.html  humidity_8cpp.html  image_8gif.html  menudata.js  metric__optimizer_8cpp.html  namespacegridpp.html  namespacemembers.html  namespacemembers_eval.html  namespacemembers_vars.html  nearest_8cpp.html  neighbourhood_8cpp.html  oi_8cpp.html  point_8cpp.html  pressure_8cpp.html  qnh_8cpp.html  simple__gradient_8cpp.html  (+2 more)
Calibrator/: .Wind.cpp.swp  Accumulate.cpp  Accumulate.h  Calibrator.cpp  Calibrator.h  Cloud.cpp  Cloud.h  Smooth.cpp  Temperature.cpp  Temperature.h  Zaga.cpp  Zaga.h
Downscaler/: Downscaler.cpp  Downscaler.h  Gradient.cpp  Gradient.h  NearestNeighbour.cpp  NearestNeighbour.h  Smart.cpp  Smart.h
Driver/: PostProcess.cpp  PrecipCal.cpp  Statkraft.cpp
File/: Arome.cpp  Arome.h  Ec.cpp  Ec.h  Fake.cpp  Fake.h  File.cpp  File.h  Netcdf.cpp  Netcdf.h
SWIG/: gridpp.i
SWIG/python/: CMakeLists.txt  setup.in.py  version.in.py
Testing/: Base.cpp  FileArome.cpp  OperationalStatkraft.cpp  Setup.cpp  Util.cpp
cmake/: FindNetCDF.cmake  Testing.cmake
coverage/: .gitignore
debian/: changelog  control  copyright  files  rules  watch
docs/: DoxygenLayout.xml  conf.py  config.in  header.html  index.html  index.rst
doxygen/: .gitignore  config  config.in
extras/SWIG/python/: CMakeLists.txt  setup.in.py
extras/python/: CMakeLists.txt  setup.in.py
include/: gridpp.h
python/: setup.in.py
search/: all_16.js  all_5.js  all_6.js  all_9.js  all_b.js  all_c.js  classes_1.js  enumvalues_1.js  files_4.js  files_5.js  files_9.js  functions_13.js  functions_2.js  functions_6.js  functions_a.js  functions_c.js  searchdata.js  typedefs_2.js  typedefs_3.js  variables_0.js
src/: Field.cpp  Field.h  Grid.h  KDTree.cpp  KDTree.h  KalmanFilter.cpp  KalmanFilter.h  Location.cpp  Location.h  NetcdfUtil.cpp  NetcdfUtil.h  Options.cpp  Options.h  ParameterFile.cpp  ParameterFile.h  Parameters.cpp  Parameters.h  Scheme.h  Setup.cpp  Setup.h  SetupKf.cpp  SetupKf.h  SetupTrain.cpp  SetupTrain.h  TrainingData.cpp  TrainingData.h  Util.cpp  Util.h  VPTree.cpp  VPTree.h  Variable.cpp  Variable.h  VariableMap.cpp  VariableMap.h  (+1 more)
src/client/: CMakeLists.txt  Field.cpp  Grid.cpp  KDTree.cpp  KDTree.h  Location.h  NetcdfUtil.cpp  NetcdfUtil.h  Options.cpp  Scheme.cpp  Scheme.h  Util.cpp  Util.h  Uuid.h  Variable.h  Version.h  run_all_tests.sh
src/client/Calibrator/: Altitude.cpp  Altitude.h  Bct.cpp  Cloud.cpp  Coastal.h  Deaccumulate.cpp  Deaccumulate.h  DiagnoseHumidity.cpp  DiagnoseHumidity.h  DiagnoseWind.cpp  Override.h  Phase.h  Qc.h  Qnh.h  Qq.cpp  Regression.cpp  Threshold.cpp  WindDirection.cpp
src/client/Downscaler/: Bilinear.cpp  Coastal.h  Downscaler.cpp  Gradient.cpp  NearestNeighbour.cpp  Pressure.cpp  Pressure.h  Smart.h  Upscale.h
src/client/Driver/: Custom.cpp  Gridpp.cpp
src/client/File/: Fake.cpp  Fake.h  File.cpp  Netcdf.cpp  Netcdf.h  Point.h  Text.cpp  Text.h
src/client/ParameterFile/: Netcdf.cpp  Netcdf.h  ParameterFile.h  Simple.cpp  Text.cpp
src/client/Testing/: CalibratorAccumulate.cpp  CalibratorDiagnoseHumidity.cpp  CalibratorDiagnoseWind.cpp  CalibratorMask.cpp  CalibratorRegression.cpp  CalibratorSort.cpp  CalibratorThreshold.cpp  CalibratorWindDirection.cpp  DownscalerBilinear.cpp  DownscalerGradient.cpp  DownscalerNearestNeighbour.cpp  DownscalerPressure.cpp  FileFake.cpp  FileNetcdf.cpp  FileNorcomQnh.cpp  NetcdfUtil.cpp  Options.cpp  ParameterFile.cpp  Parameters.cpp  Setup.cpp  SetupTrain.cpp
swig/: CMakeLists.txt  gridpp.i  gridpp.i.bkp  vector.i
swig/R/: CMakeLists.txt
swig/python/: CMakeLists.txt  setup.in.py
swig/python-packaging/: CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.in.py  setup.sh
(+984 files in other folders)
